# amalgam

./: CHANGELOG.md  Cargo.toml  LICENSE  PORTING.md  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: ci.yml
docs/: AUDIT.md  PARITY.md
examples/: adaptive_conditional.rs  basic.rs  di.rs  failsafe.rs  multilevel.rs  otel.rs  plugins.rs  prometheus.rs  redis.rs  soft_timeout.rs
src/: backplane.rs  cache.rs  circuit.rs  distributed.rs  distributed_lock.rs  entry.rs  error.rs  events.rs  factory.rs  lib.rs  locking.rs  maybe.rs  memory.rs  observability.rs  options.rs  otel.rs  plugins.rs  recovery.rs  redis_backend.rs  registry.rs  serializers.rs  tags.rs  time.rs
tests/: behavior.rs  features.rs  gaps.rs  multilevel.rs  recovery.rs
