[package]
name = "amalgam"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "A robust, multi-level, fail-safe cache — an idiomatic Rust port of .NET's FusionCache (cache-stampede protection, fail-safe, soft/hard timeouts, eager refresh, L1+L2, backplane, tagging)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZoonTronGG/amalgam"
readme = "README.md"
keywords = ["cache", "caching", "fusioncache", "stampede", "failsafe"]
categories = ["caching", "asynchronous"]

[dependencies]
async-trait = "0.1.89"
dashmap = "6.2.1"
fastrand = "2.4.1"
metrics = { version = "0.24.6", optional = true }
moka = { version = "0.12.15", features = ["future"] }
opentelemetry = { version = "0.32", optional = true }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"], optional = true }
redis = { version = "1.2.4", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }
rmp-serde = { version = "1.3.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.33", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"], optional = true }

[features]
default = []
redis = ["dep:redis"]
messagepack = ["dep:rmp-serde"]
metrics = ["dep:metrics"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]
full = ["redis", "messagepack", "metrics", "opentelemetry"]
