[package]
# `amalgam` is taken on crates.io, so the published crate is `amalgam-cache`.
# The library is still imported as `use amalgam::...` (see `[lib]` below).
name = "amalgam-cache"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "A robust, multi-level, fail-safe cache — an idiomatic Rust port of .NET's FusionCache (cache-stampede protection, fail-safe, soft/hard timeouts, eager refresh, L1+L2, backplane, tagging)."
license = "MIT"
repository = "https://github.com/ZoonTronLabs/amalgam"
homepage = "https://github.com/ZoonTronLabs/amalgam"
documentation = "https://docs.rs/amalgam-cache"
readme = "README.md"
keywords = ["cache", "caching", "fusioncache", "stampede", "failsafe"]
categories = ["caching", "asynchronous"]
# Keep the published crate lean: ship source + docs, not large binary art or infra.
exclude = ["/assets/*.png", "/.github", "/docker-compose.yml", "/prometheus.yml"]

[lib]
name = "amalgam"

[dependencies]
async-trait = "0.1.89"
dashmap = "6.2.1"
fastrand = "2.4.1"
metrics = { version = "0.24.6", optional = true }
moka = { version = "0.12.15", features = ["future"] }
opentelemetry = { version = "0.32", optional = true }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"], optional = true }
postcard = { version = "1.1.3", optional = true, features = ["use-std"] }
redis = { version = "1.2.4", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }
rmp-serde = { version = "1.3.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.33", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"], optional = true }

[features]
default = []
redis = ["dep:redis"]
messagepack = ["dep:rmp-serde"]
metrics = ["dep:metrics"]
opentelemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]
postcard = ["dep:postcard"]
full = ["redis", "messagepack", "postcard", "metrics", "opentelemetry"]

[dev-dependencies]
metrics-exporter-prometheus = "0.18.3"
